--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,10 @@
 .hero-bg {
-    background-image: url('assets/img/ba1.jpg'); /* Reemplaza 'ruta-de-tu-imagen.jpg' con la URL de tu imagen de fondo */
+    background-image: url('../assets/img/ba1.jpg'); /* Reemplaza 'ruta-de-tu-imagen.jpg' con la URL de tu imagen de fondo */
     background-size: cover;
     background-position: center;
     color: #ffffff; /* Cambia el color de texto según tu diseño */
     padding: 200px 0; /* Espaciado interno */
+    
 }
 
 #fondo {
