--- a/css/styles.css
+++ b/css/styles.css
@@ -28,3 +28,14 @@ background-image: linear-gradient(90deg, #002231 0%, #1871ab 100%);
 #gris{
     background-color: rgb(31, 29, 29);
 }
+#grande{
+
+   transition:transform 3s, background-color 3s;
+}
+.grande:haver{
+    transform:(200px,200px) scale(2);
+    background-color: blue;
+    border:5px solid blue;
+
+
+}
