--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,10 @@
     margin-left: 20%;
     margin-right: 20%;
 }
-
+.contenedor1{
+    margin-left: 15%;
+    margin-right: 15%;
+}
 .degradado{
     background-color: #002231;
 background-image: linear-gradient(90deg, #002231 0%, #1871ab 100%);
